--- a/assessment-students.html
+++ b/assessment-students.html
@@ -66,7 +66,7 @@ document.getElementById("yearLabel").innerText = SYSTEM_YEAR;
 const classId = localStorage.getItem("class_id");
 const subjectId = localStorage.getItem("subject_id");
 const academicYear = localStorage.getItem("academic_year") || SYSTEM_YEAR;
-
+const learningAreaId = subjectId; // treat subject as learning area
 if (!classId || !subjectId) {
   alert("Please select a class and subject first.");
   window.location.href = "teacher-dashboard.html";
