--- a/teacher.html
+++ b/teacher.html
@@ -77,7 +77,7 @@ classListEl.addEventListener("click", e => {
   localStorage.setItem("subject_id", subjectId);
   localStorage.setItem("academic_year", academicYear);
 
-  window.location.href = "assessment-students.html";
+  window.location.href = "assessments.html";
 });
 
 loadDashboard();
