--- a/assessments.html
+++ b/assessments.html
@@ -41,12 +41,19 @@
 <!-- Competencies on top -->
 <div class="competency-section">
   <label>Core Competencies:</label>
-  <select id="coreCompetencies" multiple></select>
+  <select id="coreCompetencies" multiple>
+    <option value="" disabled>Select core competencies</option>
+  </select>
 </div>
 
 <div class="competency-section">
   <label>Subject-specific Competencies (type manually):</label>
   <input type="text" id="subjectCompetency" placeholder="Enter subject-specific competencies, comma-separated">
+</div>
+
+<div class="competency-section">
+  <label>Values (optional):</label>
+  <input type="text" id="valuesInput" placeholder="Enter values if any">
 </div>
 
 <table>
@@ -81,7 +88,10 @@ const classId = localStorage.getItem("class_id");
 const subjectId = localStorage.getItem("subject_id");
 const academicYear = localStorage.getItem("academic_year") || SYSTEM_YEAR;
 
-if (!classId || !subjectId) { alert("Please select a class and subject first."); window.location.href="teacher-dashboard.html"; }
+if (!classId || !subjectId) { 
+  alert("Please select a class and subject first."); 
+  window.location.href="teacher-dashboard.html"; 
+}
 
 // Display class and subject names
 const { data: classData } = await supabase.from("classes").select("name").eq("id", classId).single();
@@ -91,19 +101,30 @@ document.getElementById("subjectLabel").innerText = subjectData?.name || "N/A";
 
 // Load terms
 const { data: terms } = await supabase.from("terms").select("id, name");
-document.getElementById("termSelect").innerHTML = `<option value="" disabled selected>-- Select Term --</option>${terms.map(t => `<option value="${t.id}">${t.name}</option>`).join("")}`;
+document.getElementById("termSelect").innerHTML = `
+  <option value="" disabled selected>-- Select Term --</option>
+  ${terms.map(t => `<option value="${t.id}">${t.name}</option>`).join("")}
+`;
 
 // Load assessment types
 const { data: assessmentTypes } = await supabase.from("assessment_types").select("id, name");
-document.getElementById("assessmentTypeSelect").innerHTML = `<option value="" disabled selected>-- Select Assessment Type --</option>${assessmentTypes.map(a => `<option value="${a.id}">${a.name}</option>`).join("")}`;
+document.getElementById("assessmentTypeSelect").innerHTML = `
+  <option value="" disabled selected>-- Select Assessment Type --</option>
+  ${assessmentTypes.map(a => `<option value="${a.id}">${a.name}</option>`).join("")}
+`;
 
 // Load achievement levels
 const { data: levels } = await supabase.from("achievement_levels").select("id, label").order("order_rank");
 
 // Load core competencies
-const { data: competencies } = await supabase.from("competencies").select("id, name, subject_id").or("is_active.is.null,is_active.eq.true").order("name");
+const { data: competencies } = await supabase
+  .from("competencies")
+  .select("id, name, subject_id")
+  .or("is_active.is.null,is_active.eq.true")
+  .order("name");
+
 const coreSelect = document.getElementById("coreCompetencies");
-competencies.filter(c=>!c.subject_id).forEach(c => {
+competencies.filter(c => !c.subject_id).forEach(c => {
   const opt = document.createElement("option");
   opt.value = c.id;
   opt.textContent = c.name;
@@ -111,7 +132,12 @@ competencies.filter(c=>!c.subject_id).forEach(c => {
 });
 
 // Load students
-const { data: students } = await supabase.from("students").select("id, admission_number, first_name, last_name").eq("class_id", classId).order("last_name");
+const { data: students } = await supabase
+  .from("students")
+  .select("id, admission_number, first_name, last_name")
+  .eq("class_id", classId)
+  .order("last_name");
+
 const tbody = document.getElementById("studentsBody");
 if (!students?.length) tbody.innerHTML = `<tr><td colspan="3">No students in this class</td></tr>`;
 else tbody.innerHTML = students.map(s => `
@@ -133,8 +159,9 @@ document.getElementById("saveAssessment").onclick = async () => {
   const termId = document.getElementById("termSelect").value;
   const termName = document.getElementById("termSelect").selectedOptions[0]?.text;
   const assessmentTypeId = document.getElementById("assessmentTypeSelect").value;
-  const selectedCoreCompetencies = Array.from(coreSelect.selectedOptions).map(o=>o.value);
+  const selectedCoreCompetencies = Array.from(coreSelect.selectedOptions).map(o=>o.value) || [];
   const subjectCompetency = document.getElementById("subjectCompetency").value;
+  const valuesInput = document.getElementById("valuesInput").value;
 
   if (!termId || !assessmentTypeId) { alert("Select term and assessment type"); return; }
 
@@ -150,11 +177,20 @@ document.getElementById("saveAssessment").onclick = async () => {
 
   // Create assessment
   const { data: assessment, error: assessmentError } = await supabase.from("assessments").insert([{
-    title: assessmentTitle, class_id: classId, subject_id: subjectId,
-    school_id: schoolId, term_id: termId, term: termName,
-    academic_year: academicYear, assessment_type_id: assessmentTypeId,
-    learning_area_id: subjectId, assessment_date: today, created_by: user.id,
-    core_competencies: selectedCoreCompetencies, subject_competencies: subjectCompetency
+    title: assessmentTitle,
+    class_id: classId,
+    subject_id: subjectId,
+    school_id: schoolId,
+    term_id: termId,
+    term: termName,
+    academic_year: academicYear,
+    assessment_type_id: assessmentTypeId,
+    learning_area_id: subjectId,
+    assessment_date: today,
+    created_by: user.id,
+    core_competencies: selectedCoreCompetencies,
+    subject_competencies: subjectCompetency,
+    values: valuesInput
   }]).select().single();
 
   if (assessmentError) { document.getElementById("status").innerText = `Error: ${assessmentError.message}`; return; }
